<resources>
    <string name="app_name">JoinPa</string>
    <string name="already_join">Already joined ?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="avatar">Avatar</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="not_member">Not a member ?</string>
    <string name="join_now">Join us now</string>
    <string name="join">Join</string>
    <string name="please_wait">Please wait</string>
    <string name="explore">Explore</string>
    <string name="my_events">My events</string>
    <string name="invites">Invites</string>
    <string name="recent_events">Recent events</string>
    <string name="friends">Friends</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_dialog_message">Are you sure to sign out from this device ?</string>
    <string name="search">Search</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="search_new_friend">Search new friends</string>
    <string name="friend_requests">Friend requests</string>
    <string name="create_new_event">Create new event</string>
    <string name="create_my_event">Create my event</string>
    <string name="choose_icon">Choose icon</string>
    <string name="event_name">Event name</string>
    <string name="select_frined">Select friends</string>
    <string name="event_details">Event details</string>
    <string name="visibility">Visibility</string>
    <string name="hidden">Hidden</string>
    <string name="hidden_desc">Shown to only invited friends</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="click_here_to_choose_date">Click here to choose date</string>
    <string name="click_here_to_choose_time">Click here to choose time</string>
    <string name="location">Location</string>
    <string name="add_new_location">Add new location</string>
    <string name="google_map_API_key">AIzaSyDCgPKbyR_kpI_DJI9K2p8GwzlvTp86qtU</string>
    <string name="use_google_map">Use Google Map</string>
    <string name="use_map_desc">Show a place with pinned location</string>
    <string name="shown_to_all">Shown to all</string>
    <string name="public_desc">Your friends can see and join</string>
    <string name="confirm">Confirm</string>
    <string name="joined">Joined</string>
    <string name="pending">Pending</string>
    <string name="declined">Declined</string>
    <string name="please_select_location">Please select location</string>
    <string name="who_coming">Who\'s coming</string>
    <string name="invite_friends">Invite friends</string>
</resources>
