<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ske.joinpa.joinpa.ui.views.WhoComingActivity"
    android:background="@color/colorPrimary">
    <android.support.v7.widget.Toolbar
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        style="@style/ToolBarStyle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_coming"
            style="@style/toolbarTextTitle"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/toolbar"
        android:layout_alignStart="@+id/toolbar"
        android:id="@+id/linearLayout5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/joined"
            android:id="@+id/btn_joined"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/viewPagerButtonStyle"
            android:background="@drawable/rounded_button_white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/pending"
            android:id="@+id/btn_pending"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/viewPagerButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/declined"
            android:id="@+id/btn_declined"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            style="@style/viewPagerButtonStyle" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout5"></android.support.v4.view.ViewPager>
</RelativeLayout>
