<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.joinpa.joinpa.ui.views.SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/relativeLayout"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="@dimen/text_heading" />


    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar"
            android:id="@+id/avatar_label"
            android:textColor="@color/colorPrimary"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/choose_avatar_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/avatar_label">

        </android.support.v7.widget.RecyclerView>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_wrapper"
            android:layout_below="@+id/choose_avatar_view"
            android:layout_marginTop="@dimen/text_input_margin_top">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textSize="@dimen/text_body"
                android:id="@+id/username_input"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_wrapper"
            android:layout_below="@+id/username_wrapper"
            android:layout_marginTop="@dimen/text_input_margin_top">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="@dimen/text_body"
                android:id="@+id/password_input"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cpassword_wrapper"
            android:layout_below="@+id/password_wrapper"
            android:layout_marginTop="@dimen/text_input_margin_top">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textSize="@dimen/text_body"
                android:id="@+id/cpassowrd_input"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_wrapper"
            android:layout_below="@+id/cpassword_wrapper"
            android:layout_marginTop="@dimen/text_input_margin_top">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="@dimen/text_body"
                android:id="@+id/email_input"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Join us"
            android:layout_below="@id/email_wrapper"
            />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/sign_up_tab"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_join"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Sign in now"
                android:textColor="#ffffff"
                android:layout_alignTop="@+id/t1"
                android:layout_toRightOf="@+id/t1"
                android:layout_toEndOf="@+id/t1" />

        </RelativeLayout>


    </FrameLayout>

</RelativeLayout>
