<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.joinpa.joinpa.ui.views.SigninActivity"
    android:orientation="vertical"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                android:textSize="@dimen/text_heading"
                android:layout_marginTop="7dp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/layout_bottom">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_username"
                    android:theme="@style/TextLabel"
                    android:layout_below="@+id/choose_avatar_view"
                    android:layout_marginTop="@dimen/text_input_margin_top">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textSize="@dimen/text_body"
                        android:id="@+id/et_username"
                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_password"
                    android:layout_below="@+id/choose_avatar_view"
                    android:theme="@style/TextLabel"
                    android:layout_marginTop="@dimen/text_input_margin_top">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="@dimen/text_body"
                        android:id="@+id/et_password"
                        />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:id="@+id/btnSignin"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_size"
            android:id="@+id/layout_bottom"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_member"
                    android:textColor="#ffffff"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/join_now"
                    android:textColor="#ffffff"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_toEndOf="@+id/textView2"
                    android:id="@+id/textView3"
                    android:layout_marginRight="10dp" />

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:id="@+id/imageView2"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView3"
                    android:layout_toEndOf="@+id/textView3"
                    android:src="@drawable/right_arrow" />
            </RelativeLayout>
        </FrameLayout>

    </RelativeLayout>
</LinearLayout>
