<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="io.joinpa.joinpa.ui.views.SelectFriendActivity"
    android:background="@color/colorPrimary">
    <android.support.v7.widget.Toolbar

        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        style="@style/ToolBarStyle"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/toolbarTextTitle"
            android:text="@string/select_frined" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/toolbarTextTitle"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="right"
            android:text="OK (0)"
            android:id="@+id/tv_select_friend_ok" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView8"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/select_friend_banner" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/textView14"
                android:textColor="@color/colorWhite"
                android:visibility="gone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:id="@+id/et_search"
                android:background="@drawable/rounded_edittext"
                android:layout_marginTop="@dimen/text_input_margin_top"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:id="@+id/textView15"
                android:textColor="@color/colorWhite" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
